# gnome-shell-extension-beans

./: LICENSE  README.md  meson.build  meson_options.txt  package.json
.github/workflows/: cd.yml  ci.yml  cr.yml
.reuse/: dep5
build-aux/docker/: Dockerfile  Dockerfile.toolbox
build-aux/misc/: ego.sh
src/: meson.build
src/extension/: actionMuxer.js  activator.js  actorTroupe.js  extension.js  meson.build  metadata.json.in
src/plugin/: beans-action-group.c  beans-action-group.h  beans-actions-plugin.c  beans-actions-plugin.h  beans-activatable-plugin.c  beans-activatable-plugin.h  beans-activatable.c  beans-activatable.h  beans-actor-plugin.c  beans-actor-plugin.h  beans-actor.c  beans-actor.h  example-plugin.c  example-plugin.h  example.plugin  meson.build
tests/: meson.build
tests/extra/: Dockerfile
